kubernetes/2.virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-azure-vote-front
  namespace: nsapp
spec:
  hosts:
    - 'training.ftp.sh'
  gateways:
    - app-gateway
  http:
    - route:
        - destination:
            host: svc-azure-vote-front.nsapp.svc.cluster.local
            port:
              number: 80
