kubernetes/3.virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: azure-vote-front
spec:
  hosts:
    - 'training.ftp.sh'
  gateways:
    - app-gateway
  http:
    - route:
        - destination:
            host: azure-vote-front.default.svc.cluster.local
            port:
              number: 80
